2008-12-25 Version 1.2.1-beta released

2008-12-10 Steve Chu <stvchu@gmail.com>
  * new option '-X' to make the BerkeleyDB allocate region memory from the heap instead of from memory backed by the filesystem or system shared memory. If this option enabled, you can not use db_* standalone utilities(use private commands instead), but get performance improved.

2008-11-27 Steve Chu <stvchu@gmail.com>
  * new flexible query command 'rget' implemented, can do range query based
	on keys. See 'doc/rget.txt' for details.

2008-11-26 Steve Chu <stvchu@gmail.com>
  * more graceful exit

2008-11-24 Version 1.2.0 released
2008-10-16 Version 1.2.0-beta released

2008-10-14 Steve Chu <stvchu@gmail.com>
  * a new unittest suit 'mdbtest.py' is added
  * a new benchmark suit 'mcben.py' is added, now you can get the benchmark in your environment
    and find out how fast MemcacheDB can run.

2008-10-08 Steve Chu <stvchu@gmail.com>
  * lots of statistics code clean up; stats command adjusted for better rendering; now more replication statistics info is provided. 
  * more compact and verbose message for logging
  * lots of replication code clean up for more reliable electing, a new option "-n" is added that allows user to customize the votes of electing.
  * "memcache.py" is nearly patched for recent changes on private commands. 

2008-09-04 Steve Chu <stvchu@gmail.com>
  * New option '-e' to set percent of the pages in the cache that should be clean, used for memp_trickle call(only available when '-T' is presented).
   
2008-09-03 Steve Chu <stvchu@gmail.com>
  * Replace the database type setting option '-T' with '-B'
  * Now '-T' has new meaning that it fires a separate thread to do memp_trickle every xx seconds.
    This feature makes the memory pool more effective by reducing too much frequent pages swapping.
   
2008-09-01 Steve Chu <stvchu@gmail.com>
  * Now 'append' and 'prepend' commands are supported.
  * Merge bugfix code from Memecached community.